--- a/_config.yml
+++ b/_config.yml
@@ -16,36 +16,35 @@ lang: en
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Europe/Copenhagen
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: developer                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: developer.finetech.dk  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
-
+  API & developer portal for a fictive fine-tuned fintech company 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'developer.finetech.dk'
 
 github:
-  username: github_username             # change to your github username
+  username: finetech-dk             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: finetech_dk            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: API
+  email: api@finetech.dk             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/finetech_dk     # change to your twitter homepage
+    - https://github.com/finetech-dk      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -83,7 +82,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://pbs.twimg.com/profile_images/1566341609163309057/3nN6cVfS_400x400.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
