change to finelab.io

--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,15 @@ timezone: Europe/Copenhagen
 
 title: developer                          # the main title
 
-tagline: developer.finetech.dk  # it will display as the sub-title
+tagline: developer.finelab.io  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   API & developer portal for a fictive fine-tuned fintech company 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://developer.finetech.dk'
+url: 'https://developer.finelab.io'
 
 github:
-  username: finetech-dk             # change to your github username
+  username: finelabio             # change to your github username
 
 twitter:
   username: finetech_dk            # change to your twitter username
@@ -40,11 +40,11 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: API
-  email: api@finetech.dk             # change to your email address
+  email: api@finelab.io             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/finetech_dk     # change to your twitter homepage
-    - https://github.com/finetech-dk      # change to your github homepage
+    - https://github.com/finelabio      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
